@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.5 2004/05/04 19:03:25 jmmv Exp $
+$NetBSD: distinfo,v 1.6 2004/11/04 11:46:58 abs Exp $
 
-SHA1 (id3v2-0.1.10.tar.gz) = 16a7debefa9c53445acaf44578e1dfeb75bfeb85
-Size (id3v2-0.1.10.tar.gz) = 26419 bytes
+SHA1 (id3v2-0.1.11.tar.gz) = ca825d851ca0c6a5783af107dc6baa7aa93f0bad
+Size (id3v2-0.1.11.tar.gz) = 52427 bytes
